# 2023work_for_3d

./: CMakeLists.txt  README.md  readme.txt  程序使用说明.docx
src/: EulerOperation.cpp  EulerOperation.h  HalfEdgeDataStructure.h  Sweep.cpp  Sweep.h  ZYJ.txt  main.cpp
